<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home"
        tools:context="com.example.mathswitcher.MainActivity">

    <ImageView
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_marginTop="85dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/title"
            android:id="@+id/ImgTitle"/>


    <Button
            android:text="@string/Play"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:textSize="24sp"
            android:background="@drawable/btn_general"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ImgTitle"
            android:id="@+id/Play"/>

    <Button
            android:text="@string/HowToPlay"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:background="@drawable/btn_general"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Play"
            android:id="@+id/HowToPlay"/>

    <Button
            android:text="@string/Exit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:background="@drawable/btn_general"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/HowToPlay"
            android:id="@+id/Exit"/>

</RelativeLayout>