<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#565554"
        tools:context="com.example.mathswitcher.ScoreActivity">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textColor="#F49F0A"
            android:text="@string/Breakdown"
            android:textSize="36sp"
            android:id="@+id/txtBrk"/>

    <LinearLayout
            android:id="@+id/layScr"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBrk"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:layout_marginTop="20dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ScVal"
                android:textSize="36sp"
                android:textColor="#F49F0A"
                android:textAlignment="textStart"
                android:layout_weight="2"/>

        <TextView
                android:id="@+id/txtScoVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textColor="#F49F0A"

                android:textAlignment="textEnd"
                android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
            android:id="@+id/layTim"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/layScr"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:layout_marginTop="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TiVal"
                android:textSize="36sp"
                android:textColor="#F49F0A"
                android:textAlignment="textStart"
                android:layout_weight="2"/>

        <TextView
                android:id="@+id/txtTimeScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textColor="#F49F0A"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
            android:id="@+id/layStr"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/layTim"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:layout_marginTop="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StVal"
                android:textSize="36sp"
                android:textColor="#F49F0A"
                android:textAlignment="textStart"
                android:layout_weight="2"/>

        <TextView
                android:id="@+id/txtStrkScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textColor="#F49F0A"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>


    </LinearLayout>


    <LinearLayout
            android:id="@+id/layTot"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/layStr"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:layout_marginTop="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ToVal"
                android:textSize="36sp"
                android:textColor="#FFFFFF"
                android:textAlignment="textEnd"
                android:layout_weight="2"/>

        <TextView
                android:id="@+id/txtTotlScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:textSize="48sp"
                android:textColor="#FFFFFF"
                android:textAlignment="textEnd"
                android:text=""
                android:layout_weight="1"/>
    </LinearLayout>

    <TextView
            android:id="@+id/txtMess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="48sp"
            android:textColor="#FFFFFF"
            android:layout_below="@id/layTot"
            android:textAlignment="center"/>

    <Button
            android:id="@+id/btnMenu"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:textSize="24sp"
            android:layout_below="@id/txtMess"
            android:background="@drawable/btn_general"
            android:text="@string/Return"/>

</RelativeLayout>